--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 asgiref==3.6.0
 certifi==2023.7.22
 distlib==0.3.7
+dj-database-url==2.1.0
 Django==4.2.5
+django-environ==0.11.2
 djangorestframework==3.14.0
 filelock==3.12.2
+gunicorn==21.2.0
+packaging==23.2
 pipenv==2023.7.23
 platformdirs==3.9.1
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pytz==2023.3.post1
 sqlparse==0.4.3
+typing_extensions==4.8.0
 tzdata==2022.7
 virtualenv==20.24.2
 virtualenv-clone==0.5.7
 whitenoise==6.6.0
-gunicorn==21.2.0
